major merge from dev, very fun indeed