@@ -1,80 +1,49 @@
 package dk.lyngby.dto;
 
-import com.fasterxml.jackson.annotation.JsonFormat;
 import dk.lyngby.model.Route;
 import lombok.Getter;
+import lombok.NoArgsConstructor;
 
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.Objects;
+import java.util.stream.Collectors;
+
 @Getter
-public class RouteDTO {
+@NoArgsConstructor
+public class RouteDto {
 
-    private String startPostalCode;
-    private String endPostalCode;
-    private String startLocation;
-    private String endLocation;
-    private int driverId;
-    private double routeLength;
-    private int timeInMinutes;
-    private boolean handicapAvailability;
-    private int passengerAmount;
-    private int carSize;
-    @JsonFormat(pattern="yyyy-MM-dd HH:mm")
-    LocalDateTime departureTime;
+    private Integer id;
+    private String departureLocation;
+    private String destination;
+    private LocalDateTime departureDateTime;
 
-    public RouteDTO(String startLocation, String endLocation, int driverId, double routeLength, int timeInMinutes, boolean handicapAvailability, int passengerAmount, int carSize, LocalDateTime departureTime) {
-        this.startLocation = startLocation;
-        this.endLocation = endLocation;
-        this.driverId = driverId;
-        this.routeLength = routeLength;
-        this.timeInMinutes = timeInMinutes;
-        this.handicapAvailability = handicapAvailability;
-        this.passengerAmount = passengerAmount;
-        this.carSize = carSize;
-        this.departureTime = departureTime;
+    public RouteDto(Route route) {
+        this.id = route.getId();
+        this.departureLocation = route.getStartLocation();
+        this.destination = route.getEndLocation();
+        this.departureDateTime = route.getDepartureDateTime();
     }
 
-    public RouteDTO(Route route) {
-        this.startLocation = route.getStartLocation();
-        this.endLocation = route.getEndLocation();
-        this.driverId = route.getDriverId();
-        this.routeLength = route.getRouteLength();
-        this.timeInMinutes = route.getTimeInMinutes();
-        this.handicapAvailability = route.isHandicapAvailability();
-        this.passengerAmount = route.getPassengerAmount();
-        this.carSize = route.getCarSize();
-        this.departureTime = route.getDepartureTime();
-
+    public RouteDto(String departureLocation, String destination, LocalDateTime departureDateTime) {
+        this.departureLocation = departureLocation;
+        this.destination = destination;
+        this.departureDateTime = departureDateTime;
     }
 
-    public RouteDTO(String startPostalCode, String endPostalCode, String startLocation, String endLocation, int driverId, double routeLength, int timeInMinutes, boolean handicapAvailability, int passengerAmount, int carSize, LocalDateTime departureTime) {
-        this.startPostalCode = startPostalCode;
-        this.endPostalCode = endPostalCode;
-        this.startLocation = startLocation;
-        this.endLocation = endLocation;
-        this.driverId = driverId;
-        this.routeLength = routeLength;
-        this.timeInMinutes = timeInMinutes;
-        this.handicapAvailability = handicapAvailability;
-        this.passengerAmount = passengerAmount;
-        this.carSize = carSize;
-        this.departureTime = departureTime;
-    }
-
-    public static List<RouteDTO> toDTOList(List<Route> routeList) {
-        return routeList.stream().map(RouteDTO::new).toList();
+    public static List<RouteDto> toRouteDTOList(List<Route> routes) {
+        return routes.stream().map(RouteDto::new).collect(Collectors.toList());
     }
 
     @Override
     public boolean equals(Object o) {
         if (this == o) return true;
-        if (!(o instanceof RouteDTO routeDto)) return false;
-        return driverId == routeDto.driverId;
+        if (!(o instanceof RouteDto routeDto)) return false;
+
+        return getId().equals(routeDto.getId());
     }
 
     @Override
     public int hashCode() {
-        return Objects.hash(driverId);
+        return getId().hashCode();
     }
 }
